# benchmark_platform

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  public_test.csv  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
competitions/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
competitions/migrations/: 0001_initial.py  0002_competition_private_scoring_completed_and_more.py  0003_competition_scoring_script_and_more.py  0004_metric_submission_private_scores_submission_scores_and_more.py  0005_registrationwhitelist_alter_competition_metric_type_and_more.py  0006_remove_competition_additional_metrics_and_more.py  0007_registrationwhitelist.py  0008_competition_scoring_script_and_more.py  0009_competition_metric_target_class_and_more.py
competitions/templatetags/: competition_extras.py  markdown_extras.py
config/: settings.py  urls.py
examples/: classification_public_test copy.csv  classification_public_test.csv  custom_scoring.py  detection_public_test.csv  mae_gt.csv  mae_scorer.py  rmse_gt.csv  rmse_pred.csv  rmse_scorer.py  segmentation_public_test.csv
scoring/: tasks.py
scoring/engines/: __init__.py  base.py  classification.py  custom.py  detection.py  segmentation.py
scripts/: start.sh
templates/: base.html
templates/competitions/: detail.html  list.html
templates/registration/: login.html  register.html
tests/: __init__.py  test_all_scorers.py  test_classification.py  test_custom_scoring.py  test_integration.py  test_multi_metric.py  test_registration.py  test_report.py
(+14 files in other folders)
